tests/diagnostics/types/declarations/unknown_field_type/expect.txt
# exit: 1
input/main.lang0:2:9: error: unknown type 'foo'
      id: foo,
          ^
